feat(en): normalize homepage to /en/; remove temporary redirect; use unified main.css

--- a/src/content/en/index.html
+++ b/src/content/en/index.html
@@ -2,6 +2,7 @@
 title: "English-Speaking Dietitian Brussels | Diaeta | Weight Loss, IBS, Diabetes"
 description: "Find an English-speaking dietitian in Brussels. Diaeta offers accredited nutrition consultations for weight loss, IBS (FODMAP diet), diabetes, and cholesterol management at our clinics in Ixelles, Uccle, and across the city. Book your appointment."
 lang: en
+permalink: /en/
 og_image: /images/weightloss-hero-large-optimized.jpg
 head_extra: |
   <script type="application/ld+json">
@@ -75,8 +76,6 @@ head_extra: |
 
 <!-- Minimal head-equivalent includes for styles when no layout is used -->
 <link rel="stylesheet" href="/assets/css/main.css" />
-<link rel="stylesheet" href="/legacy/css/style.css" />
-<link rel="stylesheet" href="/legacy/css/mobile-menu.css" />
 
 {% include "partials/header.njk" %}
 
