--- a/src/content/en/index.html
+++ b/src/content/en/index.html
@@ -75,109 +75,73 @@ head_extra: |
   </script>
 ---
 
-<section class="hero-section">
-  <!-- Background Video -->
-  <div class="hero-background">
-    <video 
-      class="hero-video" 
-      autoplay 
-      muted 
-      loop 
-      playsinline
-      poster="/images/hero-background-large-optimized.jpg"
-      aria-hidden="true">
-      <source src="/videos/Background video.mp4" type="video/mp4">
-      <!-- Fallback for browsers that don't support video -->
-      <div class="hero-fallback-image">
-        <img src="/images/hero-background-large-optimized.jpg" alt="" aria-hidden="true">
-      </div>
-    </video>
-    <div class="hero-overlay"></div>
+
+
+<section class="hero-immersive" aria-labelledby="hero-title">
+  <div class="hero-immersive__background" aria-hidden="true">
+    <div class="hero-immersive__gradient hero-immersive__gradient--primary"></div>
+    <div class="hero-immersive__gradient hero-immersive__gradient--accent"></div>
+    <div class="hero-immersive__pattern"></div>
   </div>
-  
-  <!-- Particles Effect (optional enhancement) -->
-  <div id="hero-particles" class="hero-particles" aria-hidden="true"></div>
-  
-    <div class="container hero-content">
-    <div class="hero-card animate-on-scroll fade-up">
-      <div class="hero-card-head">
-        <div class="hero-badge animate-on-scroll fade-in">
-          <i class="fa-solid fa-flask-vial" aria-hidden="true"></i>
-          <span>Evidence-Based Care</span>
-        </div>
-        <h1 class="hero-headline animate-on-scroll fade-up">
-          Personalized Nutrition,<br>
-          <span class="hero-headline-accent">Backed by Medical Science</span>
-        </h1>
-        <p class="hero-tagline animate-on-scroll fade-up delay-200">
-          Transform your health with <strong>sustainable habits</strong> for IBS, Weight Management, Type 2 Diabetes, and Cholesterol with clear guidance, compassion, and no fad promises.
-        </p>
-        <div class="hero-description animate-on-scroll fade-up delay-300">
-          <p>Looking for an English-speaking dietitian in Brussels? At Diaeta, we combine <span class="text-highlight">evidence-based science</span> with <span class="text-highlight">genuine care</span> to create solutions that work for you.</p>
-        </div>
+  <div class="container hero-immersive__container">
+    <div class="hero-immersive__intro">
+      <span class="hero-immersive__eyebrow">
+        <i class="fa-solid fa-heart-pulse" aria-hidden="true"></i>
+        Translational nutrition practice
+      </span>
+      <h1 class="hero-immersive__headline" id="hero-title">
+        Unlock lasting metabolic change with clinical nutrition partners
+      </h1>
+      <p class="hero-immersive__copy">
+        Diaeta simplifies your IBS, weight, diabetes, and cholesterol management with medical dietitians who translate data into daily habits you can keep.
+      </p>
+      <div class="hero-immersive__cta">
+        <a href="/en/appointment/" class="btn btn-accent btn-lg">
+          <i class="fa-solid fa-calendar-days" aria-hidden="true"></i>
+          <span>Book your consultation</span>
+        </a>
+        <a href="#approach" class="hero-immersive__secondary">
+          <span>Discover the Diaeta method</span>
+          <i class="fa-solid fa-arrow-right-long" aria-hidden="true"></i>
+        </a>
       </div>
-      <div class="hero-card-body">
-        <div class="feature-badges animate-on-scroll fade-up delay-400">
-          <span class="badge badge--pill badge--md badge--soft badge--primary"><i class="fa-solid fa-microscope" aria-hidden="true"></i><span>Scientific Approach</span></span>
-          <span class="badge badge--pill badge--md badge--soft badge--primary"><i class="fa-solid fa-chart-line" aria-hidden="true"></i><span>Sustainable Results</span></span>
-          <span class="badge badge--pill badge--md badge--soft badge--primary"><i class="fa-solid fa-fingerprint" aria-hidden="true"></i><span>Fully Personalized</span></span>
-        </div>
-        <div class="hero-cta animate-on-scroll fade-up delay-500">
-          <div class="hero-cta-buttons">
-            <a href="/en/appointment/" class="btn btn-primary btn-lg pulse-animation">
-              <i class="fa-solid fa-calendar-check" aria-hidden="true"></i>
-              <span>Book a Consultation</span>
-              <i class="fa-solid fa-arrow-right btn-icon-right" aria-hidden="true"></i>
-            </a>
-            <a href="#approach" class="btn btn-outline btn-lg scroll-to">
-              <i class="fa-solid fa-compass" aria-hidden="true"></i>
-              <span>Explore Our Services</span>
-              <i class="fa-solid fa-chevron-right btn-icon-right" aria-hidden="true"></i>
-            </a>
-          </div>
-          <p class="hero-cta-note animate-on-scroll fade-up delay-550"><i class="fa-solid fa-stethoscope" aria-hidden="true"></i>One-to-one consultations in clinic or online, anchored in your medical history and lifestyle.</p>
-        </div>
-      </div>
-      <div class="hero-card-footer">
-        <div class="hero-trust-indicators animate-on-scroll fade-up delay-600">
-          <div class="trust-item">
-            <i class="fa-solid fa-shield-check" aria-hidden="true"></i>
-            <span>INAMI/RIZIV Registered</span>
-          </div>
-          <div class="trust-item">
-            <i class="fa-solid fa-graduation-cap" aria-hidden="true"></i>
-            <span>Monash FODMAP Certified</span>
-          </div>
-          <div class="trust-item">
-            <i class="fa-solid fa-users" aria-hidden="true"></i>
-            <span>500+ Patients Helped</span>
-          </div>
-        </div>
-        <div class="hero-evidence-note animate-on-scroll fade-up delay-650">
-          <span class="hero-evidence-pill"><i class="fa-solid fa-heart-pulse" aria-hidden="true"></i>92% program success rate*</span>
-          <span class="hero-evidence-pill"><i class="fa-solid fa-laptop-medical" aria-hidden="true"></i>Evening & telehealth appointments</span>
-        </div>
-      </div>
+      <ul class="hero-immersive__trust">
+        <li><i class="fa-solid fa-shield-heart" aria-hidden="true"></i>INAMI/RIZIV registered care</li>
+        <li><i class="fa-solid fa-users" aria-hidden="true"></i>500+ guided journeys</li>
+        <li><i class="fa-solid fa-video" aria-hidden="true"></i>Telehealth or Brussels clinics</li>
+      </ul>
     </div>
+    <aside class="hero-immersive__flow" aria-label="What happens after you book">
+      <h2 class="hero-immersive__flow-title">Your first three touchpoints</h2>
+      <ol class="hero-immersive__flow-steps">
+        <li>
+          <span class="hero-immersive__step-index">01</span>
+          <div class="hero-immersive__step-body">
+            <p class="hero-immersive__step-heading">Clinical intake</p>
+            <p class="hero-immersive__step-copy">Medical history, body composition, and metrics aligned with your specialist reports.</p>
+          </div>
+        </li>
+        <li>
+          <span class="hero-immersive__step-index">02</span>
+          <div class="hero-immersive__step-body">
+            <p class="hero-immersive__step-heading">Precision roadmap</p>
+            <p class="hero-immersive__step-copy">Targeted nutrition protocol with FODMAP, glycemic, or lipid focus plus simple meal systems.</p>
+          </div>
+        </li>
+        <li>
+          <span class="hero-immersive__step-index">03</span>
+          <div class="hero-immersive__step-body">
+            <p class="hero-immersive__step-heading">Continuous calibration</p>
+            <p class="hero-immersive__step-copy">Follow-up in person or online with data check-ins, coaching, and outcome reviews.</p>
+          </div>
+        </li>
+      </ol>
+      <p class="hero-immersive__note"><i class="fa-solid fa-circle-exclamation" aria-hidden="true"></i> Average completion rate 92% with personalised pacing. Results vary.</p>
+    </aside>
   </div>
-  <div class="hero-metrics-marquee" role="region" aria-label="Health outcomes">
-    <div class="marquee-track">
-      <span class="badge badge--pill badge--sm badge--neutral"><i class="fa-solid fa-droplet"></i> HbA1c -1 to -2%*</span>
-      <span class="badge badge--pill badge--sm badge--neutral"><i class="fa-solid fa-heart-pulse"></i> LDL -20%* (Portfolio Diet)</span>
-      <span class="badge badge--pill badge--sm badge--neutral"><i class="fa-solid fa-bacteria"></i> IBS relief in ~75% of cases*</span>
-      <span class="badge badge--pill badge--sm badge--neutral"><i class="fa-solid fa-scale-balanced"></i> 92% program success rate*</span>
-      <span class="badge badge--pill badge--sm badge--neutral"><i class="fa-solid fa-tape"></i> Waist -10 cm*</span>
-      <span class="badge badge--pill badge--sm badge--neutral"><i class="fa-solid fa-seedling"></i> Sustainable change</span>
-      <span class="badge badge--pill badge--sm badge--neutral"><i class="fa-solid fa-droplet"></i> HbA1c -1 to -2%*</span>
-      <span class="badge badge--pill badge--sm badge--neutral"><i class="fa-solid fa-heart-pulse"></i> LDL -20%* (Portfolio Diet)</span>
-      <span class="badge badge--pill badge--sm badge--neutral"><i class="fa-solid fa-bacteria"></i> IBS relief in ~75% of cases*</span>
-      <span class="badge badge--pill badge--sm badge--neutral"><i class="fa-solid fa-scale-balanced"></i> 92% program success rate*</span>
-      <span class="badge badge--pill badge--sm badge--neutral"><i class="fa-solid fa-tape"></i> Waist -10 cm*</span>
-      <span class="badge badge--pill badge--sm badge--neutral"><i class="fa-solid fa-seedling"></i> Sustainable change</span>
-    </div>
-  </div>
-  <p class="hero-metrics-disclaimer">*Results based on patient averages and scientific studies; individual outcomes may vary.</p>
 </section>
+
+
 
 <section class="clinical-canvas-section" id="approach">
   <div class="container">
